# trend-desk-space

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  secrets.env.example
backend/: app.py  backup.py  config.py  db.py  engine.py  migrate.py  schema.py  secrets.py  web_auth.py
backend/analysis/: trend_brief.py  trend_facts.py
backend/api/: automation.py  discipline.py  read.py  routes.py  sse.py  swing.py
backend/chat/: conversation.py  discipline_read_tools.py  dispatcher.py  read_tools.py  system.py  tools.py
backend/discipline/: __init__.py  accounts.py  automation.py  broker.py  capacity.py  daily_data.py  data_sources.py  dataset_plan.py  day_card.py  execution_ocr.py  exits.py  ledger.py  plan.py  review.py  rules.py  scheduler.py  selection.py
backend/filters/: chain.py  checks.py  config.py
backend/llm/: __init__.py  anthropic_api.py  base.py  claude_agent_sdk.py  claude_cli.py  codex_cli.py  fallback.py  minimax_coding_plan.py  openai_compatible.py
backend/notify/: email.py  feishu.py
backend/ocr/: aggregate.py  parser.py  review.py  runner.py  sectors.py  worker.py
backend/pipeline/: archive_originals.py  orchestrator.py  state.py
backend/risk/: config.py  sizing.py
backend/swing/: __init__.py  data.py  detector.py  eastmoney.py  tushare.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.node.json  vite.config.ts
prompts/: chat_system.md  ocr_a_market.md  ocr_execution.md  ocr_holding_temp.md  ocr_position.md  ocr_position_minimax.md  ocr_volatility.md  trend_brief_system.md
(+41 files in other folders)
